--- a/Proyecto_Comisaria/nbproject/project.properties
+++ b/Proyecto_Comisaria/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/Proyecto_Comisaria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\daw1\\Downloads\\JCalendar\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\ZeChU\\Desktop\\Proyectos Java\\JCalendar\\lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
