--- a/Proyecto_Comisaria/nbproject/project.properties
+++ b/Proyecto_Comisaria/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Proyecto_Comisaria
+application.vendor=Gerard
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,18 +27,18 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Proyecto_Comisaria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\daw1\\Downloads\\JCalendar\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\ZeChU\\Desktop\\Proyectos Java\\JCalendar\\lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
