--- a/Proyecto_Comisaria/nbproject/project.properties
+++ b/Proyecto_Comisaria/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/Proyecto_Comisaria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Users\\daw1\\Downloads\\JCalendar\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
